# MLScript

./: README.md  Vagrantfile  bootstrap.sh
cookbooks/ubuntu-haskell-llvm/: CHANGELOG.md  README.md  metadata.rb
cookbooks/ubuntu-haskell-llvm/recipes/: default.rb
mlscript/: LICENSE  mlscript.cabal  stack.yaml
mlscript/app/: InterpreterRepl.hs  Main.hs  ParserRepl.hs
mlscript/src/: Interpreter.hs  Lexer.hs  Lib.hs  Parser.hs  Syntax.hs  Util.hs
mlscript/src/Lambda/: Syntax.hs  Transform.hs
mlscript/src/Raw/: Interpreter.hs  Lexer.hs  Parser.hs  Syntax.hs
